...
            style: const TextStyle(
              fontSize: 15,
              fontWeight: FontWeight.w700,
              color: medInk,
            ),
            decoration: InputDecoration(
              hintText: 'ex: 500',
              hintStyle: const TextStyle(
                fontSize: 15,
                fontWeight: FontWeight.w700,
                color: medMuted,
              ),
              filled: false,
...
